--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 theme: jekyll-theme-minimal
+github: [metadata]
+encoding: UTF-8
+kramdown:
+ input: GFM
+ hard_wrap: false
+future: true
+jailed: false
+gfm_quirks: paragraph_end
